slight change in filenames

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
         <ul>
-          <li><a href="https://github.com/conll/reference-coreference-scorers/archive/v8.01.zip">Download <strong>v8.01 ZIP File</strong></a></li>
-          <li><a href="https://github.com/conll/reference-coreference-scorers/archive/v8.01.tar.gz">Download <strong>v8.01 TAR Ball</strong></a></li>
+          <li><a href="https://github.com/conll/reference-coreference-scorers/archive/v8.01.zip">Download <strong>v8.01.zip</strong></a></li>
+          <li><a href="https://github.com/conll/reference-coreference-scorers/archive/v8.01.tar.gz">Download <strong>v8.01.tar.gz</strong></a></li>
           <li><a href="https://github.com/conll/reference-coreference-scorers">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
