started adding material from google code wiki

--- a/index.html
+++ b/index.html
@@ -29,11 +29,19 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<!--<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>-->
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is a reference implementation of the commonly used coreference scoring algorithms verified by a committee for use by the general community. If you use this scorer, please cite the following two papers:</p>
+<ul>
+  <li><b>Scoring Coreference Partitions of Predicted Mentions: A Reference Implementation</b><br/>
+  Sameer Pradhan, Xiaoqiang Luo, Marta Recasens, Eduard Hovy, Vincent Ng and Michael Strube<br/>
+  <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014. [<a href="http://aclweb.org/anthology/P/P14/P14-2006.pdf">pdf</a>]</li>
+  <li><b>An Extension of BLANC to System Mentions</b><br/>
+  Xiaoqiang Luo, Sameer Pradhan, Marta Recasens and Eduard Hovy<br/>
+  <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014.</li>
+</ul>
 
-<pre><code>$ cd your_repo_root/repo_name
+<!--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
@@ -59,6 +67,7 @@ $ git checkout gh-pages
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+-->
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/conll">conll</a></p>
