--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <!--<header>
         <h1>Reference Coreference Scorers</h1>
         <p></p>
 
@@ -26,7 +26,7 @@
           <li><a href="https://github.com/conll/reference-coreference-scorers/archive/v8.01.tar.gz">Download <strong>v8.01.tar.gz</strong></a></li>
           <li><a href="https://github.com/conll/reference-coreference-scorers">View On <strong>GitHub</strong></a></li>
         </ul>
-      </header>
+      </header>-->
       <section>
         
 <!--<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>-->
