--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <!--<header>
+      <header>
         <h1>Reference Coreference Scorers</h1>
         <p></p>
 
@@ -26,19 +26,15 @@
           <li><a href="https://github.com/conll/reference-coreference-scorers/archive/v8.01.tar.gz">Download <strong>v8.01.tar.gz</strong></a></li>
           <li><a href="https://github.com/conll/reference-coreference-scorers">View On <strong>GitHub</strong></a></li>
         </ul>
-      </header>-->
+      </header>
       <section>
         
 <!--<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>-->
 
 <p>This is a reference implementation of the commonly used coreference scoring algorithms verified by a committee for use by the general community. If you use this scorer, please cite the following two papers:</p>
 <ul>
-  <li><b>Scoring Coreference Partitions of Predicted Mentions: A Reference Implementation</b><br/>
-  Sameer Pradhan, Xiaoqiang Luo, Marta Recasens, Eduard Hovy, Vincent Ng and Michael Strube<br/>
-  <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014. [<a href="http://aclweb.org/anthology/P/P14/P14-2006.pdf">pdf</a>]</li>
-  <li><b>An Extension of BLANC to System Mentions</b><br/>
-  Xiaoqiang Luo, Sameer Pradhan, Marta Recasens and Eduard Hovy<br/>
-  <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014.</li>
+  <li><bold>Scoring Coreference Partitions of Predicted Mentions: A Reference Implementation.</bold> Sameer Pradhan, Xiaoqiang Luo, Marta Recasens, Eduard Hovy, Vincent Ng and Michael Strube. <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014. [<a href="http://aclweb.org/anthology/P/P14/P14-2006.pdf">pdf</a>]</li>
+  <li><bold>An Extension of BLANC to System Mentions.</bold> Xiaoqiang Luo, Sameer Pradhan, Marta Recasens and Eduard Hovy. <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014.</li>
 </ul>
 
 <!--<pre><code>$ cd your_repo_root/repo_name
