--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
 -->
       </section>
-      <footer>
+      <!--<footer>
         <p>This project is maintained by <a href="https://github.com/conll">conll</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+      </footer>-->
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
