added link to second pdf

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>This is a reference implementation of the commonly used coreference scoring algorithms verified by a committee for use by the general community. If you use this scorer, please cite the following two papers:</p>
 <ul>
   <li><bold>Scoring Coreference Partitions of Predicted Mentions: A Reference Implementation.</bold> Sameer Pradhan, Xiaoqiang Luo, Marta Recasens, Eduard Hovy, Vincent Ng and Michael Strube. <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014. [<a href="http://aclweb.org/anthology/P/P14/P14-2006.pdf">pdf</a>]</li>
-  <li><bold>An Extension of BLANC to System Mentions.</bold> Xiaoqiang Luo, Sameer Pradhan, Marta Recasens and Eduard Hovy. <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014.</li>
+  <li><bold>An Extension of BLANC to System Mentions.</bold> Xiaoqiang Luo, Sameer Pradhan, Marta Recasens and Eduard Hovy. <i>Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics</i>, Baltimore, MD, June 2014. [<a href="http://aclweb.org/anthology/P/P14/P14-2005.pdf">pdf</a>]</li>
 </ul>
 
 <!--<pre><code>$ cd your_repo_root/repo_name
