edit the title a bit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Reference Coreference Scorers</h1>
+        <h1>Reference Implementation of Coreference Scoring Algorithms</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/conll/reference-coreference-scorers">View the Project on GitHub <small>conll/reference-coreference-scorers</small></a></p>
