--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Reference Implementation of Coreference Scoring Algorithms</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/conll/reference-coreference-scorers">View the Project on GitHub <small>conll/reference-coreference-scorers</small></a></p>
+        <p class="view"><a href="https://github.com/conll/reference-coreference-scorers">View the Project on GitHub <br/><small>conll/reference-coreference-scorers</small></a></p>
 
 
         <ul>
