some minor stylistic edits

--- a/index.html
+++ b/index.html
@@ -53,17 +53,12 @@
     <li><bold>Eduard Hovy</bold>, Carnegie Mellon University (Inventor of the BLANC metric)</li>
     <li><bold>Vincent Ng</bold>, University of Texas at Dallas (Veteran coreference researcher)</li>
 </ul>
-<p>We tried to include the researchers who invented the metrics and who are still active and reachable. We were able to have email communication with Breck Baldwin, one of the researchers who invented the B-CUBED metric.</p>
-
-<p>Our goal was to fix the technical bugs in the CoNLL-2011 and 2012 shared tasks' coreference scorer as well as to provide a publicly available, open-source implementation of the scoring algorithms for coreference. This is now available on this site.</p>
-
-<p>The two papers mentioned above report on the various issues that we encountered and the justification for the selected implementations. The main points are summarized below.</p>
-
-<p>We have re-scored all the systems that participated in the CoNLL-2011 and 2012 shared tasks using the latest version -- v8.01. This is available in a <a href="http://conll.cemantix.org/download/re-scoring-conll-evaluations.v16.xlsx">spreadsheet</a> for now, and it will be posted shortly on the shared tasks' website. This won't affect the official rankings, but will act as an update. Results for the official runs as well as the supplementary evaluation settings are provided in the spreadsheet.</p>
-
-<p>Please feel free to email <a href="mailto:pradhan@cemantix.org?Subject=Question%20regarding%20CoNLL%20Coreference%20Scorer">Sameer Pradhan</a> with questions you might have. 
-
-
+<p>
+  We tried to include the researchers who invented the metrics and who are still active and reachable. We were able to have email communication with Breck Baldwin, one of the researchers who invented the B-CUBED metric. Our goal was to fix the technical bugs in the CoNLL-2011 and 2012 shared tasks' coreference scorer as well as to provide a publicly available, open-source implementation of the scoring algorithms for coreference. This is now available on this site. The two papers mentioned above report on the various issues that we encountered and the justification for the selected implementations. The main points are summarized below. We have re-scored all the systems that participated in the CoNLL-2011 and 2012 shared tasks using the latest version -- v8.01. This is available in a <a href="http://conll.cemantix.org/download/re-scoring-conll-evaluations.v16.xlsx">spreadsheet</a> for now, and it will be posted shortly on the shared tasks' website. This won't affect the official rankings, but will act as an update. Results for the official runs as well as the supplementary evaluation settings are provided in the spreadsheet.
+</p>
+<p>
+  Please feel free to email <a href="mailto:pradhan@cemantix.org?Subject=Question%20regarding%20CoNLL%20Coreference%20Scorer">Sameer Pradhan</a> with questions you might have. 
+</p>  
 
 <!--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
