trying to fix footer again

--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
           We tried to include the researchers who invented the metrics and who are still active and reachable. We were able to have email communication with Breck Baldwin, one of the researchers who invented the B-CUBED metric. Our goal was to fix the technical bugs in the CoNLL-2011 and 2012 shared tasks' coreference scorer as well as to provide a publicly available, open-source implementation of the scoring algorithms for coreference. This is now available on this site. The two papers mentioned above report on the various issues that we encountered and the justification for the selected implementations. The main points are summarized below. We have re-scored all the systems that participated in the CoNLL-2011 and 2012 shared tasks using the latest version&mdash;v8.01. This is available in a <a href="http://conll.cemantix.org/download/re-scoring-conll-evaluations.v16.xlsx">spreadsheet</a> for now, and it will be posted shortly on the shared tasks' website. This won't affect the official rankings, but will act as an update. Results for the official runs as well as the supplementary evaluation settings are provided in the spreadsheet.
         </p>
         <p>
-          Please feel free to email <a href="mailto:pradhan@cemantix.org?Subject=Question%20regarding%20CoNLL%20Coreference%20Scorer">Sameer Pradhan</a> with questions you might have.<br/><br/>
+          Please feel free to email <a href="mailto:pradhan@cemantix.org?Subject=Question%20regarding%20CoNLL%20Coreference%20Scorer">Sameer Pradhan</a> with questions you might have.<br/>
         </p>
 
       </section>
 
       <footer>
+        <p>&nbsp;</p><br/>
+        <p>&nbsp;</p><br/>
         <p>This project is maintained by <a href="https://github.com/sameer-pradhan">Sameer Pradhan</a></p>
         <p>Please feel free to <a href="mailto:pradhan@cemantix.org?Subject=Question%20regarding%20CoNLL%20Coreference%20Scorer">email</a> with questions.</p>
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
