trying to fix footer again

--- a/index.html
+++ b/index.html
@@ -55,18 +55,13 @@
         </p>
         <p>&nbsp;</p><br/>
         <p>&nbsp;</p><br/>
-      </section>
 
-      <footer>
         <p>&nbsp;</p><br/>
         <p>&nbsp;</p><br/>
         <p>This project is maintained by</p><br/>
         <p><a href="https://github.com/sameer-pradhan">Sameer Pradhan</a> (<a href="mailto:pradhan@cemantix.org?Subject=Question%20regarding%20CoNLL%20Coreference%20Scorer">email</a>)</p>
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-      </footer>
 
-      <!--<script src="javascripts/scale.fix.js"></script> -->
-
-
+      <script src="javascripts/scale.fix.js"></script>
   </body>
 </html>
